// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@defer block 1`] = `
"@defer {
  <large-component />
} @placeholder {
  <p>Placeholder</p>
} @loading {
  <img alt="loading image" src="loading.gif" />
} @error {
  <p>An loading error occurred</p>
}
"
`;

exports[`@defer block with triggers and parameters 1`] = `
"@defer (on timer(500ms); prefetch on idle) {
  <large-component />
} @placeholder (minimum 500ms) {
  <p>Placeholder</p>
} @loading (after 100ms; minimum 1s) {
  <img alt="loading image" src="loading.gif" />
} @error {
  <p>An loading error occurred</p>
}
"
`;

exports[`@for block 1`] = `
"@for (item of items; track item.name) {
  <li>{{ item.name }}</li>
} @empty {
  <li>There are no items.</li>
}
"
`;

exports[`@if block 1`] = `
"@if (a > b) {
  {{ a }} is greater than {{ b }}
} @else if (b > a) {
  {{ a }} is less than {{ b }}
} @else {
  {{ a }} is equal to {{ b }}
}
"
`;

exports[`@switch block 1`] = `
"@switch (condition) {
  @case (caseA) {
    Case A.
  }
  @case (caseB) {
    Case B.
  }
  @default {
    Default case.
  }
}
"
`;
